--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     
     <head>
       <font face="arial"><center><h1>HowToCodde</h1>
-      <p>HowToCodde will teach you how to code in HTML</p>
+      <p>HowToCodde will teach you how to code in HTML, to start coding in HTML click the button below</p>
     </head>
 </html>
