--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <head>
       <font face="arial"><center><h1>HowToCodde</h1>
       <p>HowToCodde will teach you how to code in HTML, to start coding in HTML click the button below</p>
-    </head>
+    <button type="button">Start Coding Here!</button>
+        </head>
 </html>
