--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <head>
       <font face="arial"><center><h1>HowToCodde</h1>
       <p>HowToCodde will teach you how to code in HTML, to start coding in HTML click the button below</p>
-    <button type="button">Start Coding Here!</button>
+        <button onclick="window.location.href='https://w3docs.com';">
+      Click Here
+    </button>    
         </head>
 </html>
