--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
-      <title>HowToCodde</title>
+      <title>HowToHTML</title>
   </body>  
     
     <head>
-      <font face="arial"><center><h1>HowToCodde</h1>
-      <p>HowToCodde will teach you how to code in HTML, to start coding in HTML click the button below</p>
-        <button onclick="window.location.href='https://w3docs.com';">
-      Click Here
-    </button>    
+      <font face="arial"><center><h1>Welcome To HTML!</h1>
+      <p></p>
+            
         </head>
 </html>
