--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </body>  
     
     <head>
-      <font face="arial"><center><h1>HowToCodde</h1>
+      <font face="arial"><center><font color="green"><h1>HowToCodde</h1>
       <p>HowToCodde will teach you how to code in HTML, to start coding in HTML click the button below</p>
         <button onclick="window.location.href='https://w3docs.com';">
       Click Here
