--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       <font face="arial"><center><font color="green"><h1>HowToCodde</h1>
       <p>HowToCodde will teach you how to code in HTML, to start coding in HTML click the button below</p>
         <button onclick="window.location.href='https://w3docs.com';">
-      Click Here
+      Click Here to start coding
+          
     </button>    
         </head>
 </html>
