--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   </body>  
     
     <head>
-      <font face="arial"><center><font color="green"><h1>HowToCodde</h1>
+      <font face="arial"><center><font color="white"><h1>HowToCodde</h1>
       <p>HowToCodde will teach you how to code in HTML, to start coding in HTML click the button below</p>
         <button onclick="window.location.href='https://w3docs.com';">
-      Click Here to start coding
+      Click Here To Start C
+          oding
           
     </button>    
         </head>
