--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <body style="background-color:<body style="background-color:#000000;">
+                                                                         
+
+
       <title>HowToCodde</title>
   </body>  
     
