--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <font face="arial"><center><font color="white"><h1>HowToCodde</h1>
       <p>HowToCodde will teach you how to code in HTML, to start coding in HTML click the button below</p>
         <button onclick="window.location.href='https://w3docs.com';">
-      Click Here To Start C
-          oding
+      Click Here To Start Coding
+          
           
     </button>    
         </head>
