--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <head>
       <font face="arial"><center><font color="black"><h1>HowToCodde</h1>
       <p>HowToCodde will teach you how to code in HTML, to start coding in HTML click the button below</p>
-        <button onclick="window.location.href='https://w3docs.com';">
+        <button onclick="window.location.href='howtohtml.github.io';">
       Click Here To Start Coding
           
           
